compilateurDeca/src/test/deca/codegen/invalid/avec_objet/axe1/appel_methode_null.deca
// Description:
//    Appel de méthode sur une référence nulle.
// Resultats:
//    Erreur : dereferencement de null
// Historique:
//    cree le 14/01/2026

class A {
    void hello() { println("Hello"); }
}

{
    A a = null;
    a.hello();
}

